# dotfiles

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
dotfiles/: __init__.py  __main__.py  cli.py  config.py  core.py  errors.py  fs.py  paths.py  plans.py  vcs.py
tests/: conftest.py  test_cli.py  test_config.py  test_core_add.py  test_core_eject.py  test_core_list.py  test_core_move.py  test_fs.py  test_paths.py  test_vcs.py
