[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotfiles"
version = "0.2.0"
description = "Curate which dotfiles are kept under git version control via symlinks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jahir Fernando Montes" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
dotfiles = "dotfiles.cli:app"

[tool.setuptools.packages.find]
include = ["dotfiles*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
dotfiles = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
